--- a/ci-values.yaml
+++ b/ci-values.yaml
@@ -1,1 +1,12 @@
 image: hmctspublic.azurecr.io/plum/batch:latest
+trigger:
+  type: azure-servicebus
+  servicebus:
+    # Required: queueName OR topicName and subscriptionName
+    queueName: 
+    topicName: test-topic
+    subscriptionName: test-subscription
+    connection: TEST_ENV # This must be a connection string for a queue itself, and not a namespace level (e.g. RootAccessPolicy) connection string [#215](https://github.com/kedacore/keda/issues/215)
+    queueLength: 1
+environment:
+  TEST_ENV: "test"
