Adds support for Azure Blob Storage Trigger

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -16,7 +16,7 @@ resources:
       endpoint: 'hmcts'
 
 jobs:
-  - job: Validate
+  - job: ValidateServiceBus
     pool:
       vmImage: 'Ubuntu 16.04'
     steps:
@@ -26,6 +26,19 @@ jobs:
           chartReleaseName: chart-function-ci-test
           chartNamespace: chart-tests
           helmInstallTimeout: "500"
+          valuesFile: ci-values-servicebus.yaml
+
+  - job: ValidateBlob
+    pool:
+      vmImage: 'Ubuntu 16.04'
+    steps:
+      - template: steps/charts/validate.yaml@cnp-library
+        parameters:
+          chartName: function
+          chartReleaseName: chart-function-ci-test
+          chartNamespace: chart-tests
+          helmInstallTimeout: "500"
+          valuesFile: ci-values-blob.yaml
 
   - job: Release
     # Make sure we have a tag to run this job
@@ -34,7 +47,9 @@ jobs:
           succeeded(),
           startsWith(variables['Build.SourceBranch'], 'refs/tags/')
         )
-    dependsOn: Validate
+    dependsOn:
+      - ValidateServiceBus
+      - ValidateBlob
     pool:
       vmImage: 'Ubuntu 16.04'
     steps:
