--- a/function/templates/ScaledObject.yaml
+++ b/function/templates/ScaledObject.yaml
@@ -27,4 +27,17 @@ spec:
         {{- end }}
         connection: {{ .Values.trigger.servicebus.connection }}
         queueLength: {{ .Values.trigger.servicebus.queueLength | quote}}
+      {{- else if eq .Values.trigger.type "azure-blob" }}
+      metadata:
+        blobContainerName: {{ .Values.trigger.blob.containerName }}
+        {{- if .Values.trigger.blob.blobCount }}
+        blobCount: {{ .Values.trigger.blob.blobCount }}
+        {{- end }}
+        connection: {{ .Values.trigger.blob.connection }}
+        {{- if .Values.trigger.blob.blobPrefix }}
+        blobPrefix: {{ .Values.trigger.blob.blobPrefix }}
+        {{- end }}
+        {{- if .Values.trigger.blob.blobDelimiter }}
+        blobDelimiter: {{ .Values.trigger.blob.blobDelimiter }}
+        {{- end }}
       {{- end }}
