Make connection for blob trigger mandatory for now

--- a/ci-values-blob.yaml
+++ b/ci-values-blob.yaml
@@ -2,10 +2,10 @@ image: hmctspublic.azurecr.io/plum/batch:latest
 trigger:
   type: azure-blob
   blob:
-    # Required: blobContainerName
+    # Required: blobContainerName and connection
     blobContainerName: test-functions-blob # Required: Name of Azure Blob Storage container
     blobCount: 1 # Optional. Amount of blobs to scale out on. Default: 5 blobs
-    connection: TEST_ENV # Optional if TriggerAuthentication defined with pod identity or connection string authentication.
+    connection: TEST_ENV # connection string authentication.
     blobPrefix: "" # Optional. Prefix for the Blob. Use this to specifiy sub path for the blobs if required. Default : ""
     blobDelimiter: "/" # Optional. Delimiter for identifying the blob Prefix. Default: "/"
 environment:
