--- a/function/Chart.yaml
+++ b/function/Chart.yaml
@@ -22,5 +22,5 @@ appVersion: 0.1.0
 
 dependencies: # A list of the chart requirements (optional)
   - name: library
-    version: 0.1.4-beta
+    version: 0.5.7
     repository: '@hmctspublic'
