--- a/ci-values-mixed.yaml
+++ b/ci-values-mixed.yaml
@@ -8,5 +8,12 @@ triggers:
     accountName: ""
     blobPrefix: "" # Optional. Prefix for the Blob. Use this to specifiy sub path for the blobs if required. Default : ""
     blobDelimiter: "/" # Optional. Delimiter for identifying the blob Prefix. Default: "/"
+  - type: azure-servicebus
+    # Required: queueName OR topicName and subscriptionName
+    queueName:
+    topicName: test-topic
+    subscriptionName: test-subscription
+    connection: TEST_ENV # This must be a connection string for a queue itself, and not a namespace level (e.g. RootAccessPolicy) connection string [#215](https://github.com/kedacore/keda/issues/215)
+    queueLength: 1
 environment:
   TEST_ENV: "test"
