--- a/ci-values-servicebus.yaml
+++ b/ci-values-servicebus.yaml
@@ -1,7 +1,6 @@
 image: hmctspublic.azurecr.io/plum/batch:latest
-trigger:
-  type: azure-servicebus
-  servicebus:
+triggers:
+  - type: azure-servicebus
     # Required: queueName OR topicName and subscriptionName
     queueName:
     topicName: test-topic
