move TriggerAuthentitation to its own file with explicit config

--- a/function/templates/_blob-trigger.yaml
+++ b/function/templates/_blob-trigger.yaml
@@ -10,8 +10,8 @@
     accountName: {{ .accountName | quote }}
     blobPrefix: {{ .blobPrefix | quote }}
     blobDelimiter: {{ .blobDelimiter }}
-    {{- if eq .connection "" }}
+    {{- if ne .Values.triggerAuthName "" }}
     authenticationRef:
-      name: azure-mi-auth # authenticationRef would need either podIdentity or define a connection parameter
+      name: {{- $.Values.triggerAuthName }} # authenticationRef would need either podIdentity or define a connection parameter
     {{- end }}
 {{- end }}
