--- a/function/templates/_blob-trigger.yaml
+++ b/function/templates/_blob-trigger.yaml
@@ -10,7 +10,7 @@
     accountName: {{ .accountName | quote }}
     blobPrefix: {{ .blobPrefix | quote }}
     blobDelimiter: {{ .blobDelimiter }}
-    {{- if ne $.Values.triggerAuthName "" }}
+    {{- if $.Values.triggerAuthName }}
     authenticationRef:
       name: {{- $.Values.triggerAuthName }} # authenticationRef would need either podIdentity or define a connection parameter
     {{- end }}
