--- a/function/templates/ScaledObject.yaml
+++ b/function/templates/ScaledObject.yaml
@@ -19,6 +19,8 @@ spec:
       {{- if eq .type "azure-servicebus" }}
 {{- include "function.servicebus" . | indent 4 }}
       {{- else if eq .type "azure-blob" }}
-{{- include "function.blob" . | indent 4 }}
+      # work around to save having the triggerAuthName copied in the config for each trigger
+      {{- $data := dict "triggerAuthName" .Values.triggerAuthName "trigger" . }}
+{{- include "function.blob" $data | indent 4 }}
       {{- end }}
     {{- end }}
