--- a/function/templates/TriggerAuthentication.yaml
+++ b/function/templates/TriggerAuthentication.yaml
@@ -2,7 +2,7 @@
 apiVersion: keda.k8s.io/v1alpha1
 kind: TriggerAuthentication
 metadata:
-  name: {{- .Values.triggerAuthName }}
+  name:  {{ tpl .Values.triggerAuthName $ }}
 spec:
   podIdentity:
     provider: {{- .Values.trigger.podIdentityProvider }} # none | azure | gcp | spiffe | aws-eks | aws-kiam
