--- a/function/templates/_blob-trigger.yaml
+++ b/function/templates/_blob-trigger.yaml
@@ -12,6 +12,6 @@
     blobDelimiter: {{ .trigger.blobDelimiter }}
     {{- if .root.Values.triggerAuthName }}
     authenticationRef:
-      name: {{ tpl .root.Values.triggerAuthName .root }} # authenticationRef would need either podIdentity or define a connection parameter
+      name: {{ tpl .root.Values.triggerAuthName .root | quote }} # authenticationRef would need either podIdentity or define a connection parameter
     {{- end }}
 {{- end }}
