--- a/function/templates/_blob-trigger.yaml
+++ b/function/templates/_blob-trigger.yaml
@@ -10,8 +10,8 @@
     accountName: {{ .trigger.accountName | quote }}
     blobPrefix: {{ .trigger.blobPrefix | quote }}
     blobDelimiter: {{ .trigger.blobDelimiter }}
-    {{- if .root.Values.triggerAuthName }}
-    authenticationRef:
-      name: {{ tpl .root.Values.triggerAuthName .root | quote }} # authenticationRef would need either podIdentity or define a connection parameter
-    {{- end }}
+  {{- if .root.Values.triggerAuthName }}
+  authenticationRef:
+    name: {{ tpl .root.Values.triggerAuthName .root }} # authenticationRef would need either podIdentity or define a connection parameter
+  {{- end }}
 {{- end }}
