--- a/ci-values-blob.yaml
+++ b/ci-values-blob.yaml
@@ -1,6 +1,6 @@
 image: hmctspublic.azurecr.io/plum/batch:latest
 triggerAuthName: "azure-mi-auth-{{ .Values.scaleType }}"
-triggerPodIdentity: "azure"
+triggerPodIdentityProvider: "azure"
 triggers:
   - type: azure-blob
     # Required: blobContainerName and connection
