--- a/ci-values-mixed.yaml
+++ b/ci-values-mixed.yaml
@@ -1,13 +1,19 @@
 image: hmctspublic.azurecr.io/plum/batch:latest
-triggerAuthName: "azure-mi-auth-{{ .Values.scaleType }}"
-triggerPodIdentityProvider: "azure"
 triggers:
   - type: azure-blob
     # Required: blobContainerName and connection
     blobContainerName: test-functions-blob # Required: Name of Azure Blob Storage container
     blobCount: 1 # Optional. Amount of blobs to scale out on. Default: 5 blobs
-    accountName: "testaccount"
+    connection: TEST_ENV # connection string authentication.
+    accountName: ""
     blobPrefix: "" # Optional. Prefix for the Blob. Use this to specifiy sub path for the blobs if required. Default : ""
     blobDelimiter: "/" # Optional. Delimiter for identifying the blob Prefix. Default: "/"
+  - type: azure-servicebus
+    # Required: queueName OR topicName and subscriptionName
+    queueName:
+    topicName: test-topic
+    subscriptionName: test-subscription
+    connection: TEST_ENV # This must be a connection string for a queue itself, and not a namespace level (e.g. RootAccessPolicy) connection string [#215](https://github.com/kedacore/keda/issues/215)
+    queueLength: 1
 environment:
   TEST_ENV: "test"
