--- a/function/values.yaml
+++ b/function/values.yaml
@@ -23,20 +23,6 @@ pollingInterval: 30  # Optional. Default: 30 seconds
 cooldownPeriod:  300 # Optional. Default: 300 seconds
 minReplicaCount: 0   # Optional. Default: 0
 maxReplicaCount: 5 # Optional. Default: 5
-trigger:
-  type: azure-servicebus # use azure-blob for blob storage trigger
-  servicebus:
-    # Required: queueName OR topicName and subscriptionName
-    queueName:
-    topicName:
-    subscriptionName:
-    connection: # This must be a connection string for a queue itself, and not a namespace level (e.g. RootAccessPolicy) connection string [#215](https://github.com/kedacore/keda/issues/215)
-    queueLength: 1
-  blob:
-    # Required: blobContainerName and accountName (when using pod identity) or connection
-    blobContainerName:
-    accountName: ""
-    connection: ""
-    blobCount: 1
-    blobPrefix: ""
-    blobDelimiter: "/"
+triggerAuthName: ""
+triggerPodIdentityProvider: "azure" # none | azure | gcp | spiffe | aws-eks | aws-kiam
+triggers: []
