Template the storage account name

--- a/ci-values-blob.yaml
+++ b/ci-values-blob.yaml
@@ -6,7 +6,7 @@ triggers:
     # Required: blobContainerName and connection
     blobContainerName: test-functions-blob # Required: Name of Azure Blob Storage container
     blobCount: 1 # Optional. Amount of blobs to scale out on. Default: 5 blobs
-    accountName: "testaccount"
+    accountName: "testaccount{{ .Values.global.environment }}"
     blobPrefix: "" # Optional. Prefix for the Blob. Use this to specifiy sub path for the blobs if required. Default : ""
     blobDelimiter: "/" # Optional. Delimiter for identifying the blob Prefix. Default: "/"
 environment:
