--- a/function/templates/TriggerAuthentication.yaml
+++ b/function/templates/TriggerAuthentication.yaml
@@ -3,6 +3,7 @@ apiVersion: keda.k8s.io/v1alpha1
 kind: TriggerAuthentication
 metadata:
   name:  {{ tpl .Values.triggerAuthName $ }}
+{{- ( include "hmcts.labels.v2" . ) | indent 2 }}
 spec:
   podIdentity:
     provider: {{ .Values.triggerPodIdentityProvider }} # none | azure | gcp | spiffe | aws-eks | aws-kiam
