Adds dynamic name for trigger auth

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -40,6 +40,18 @@ jobs:
           helmInstallTimeout: "500"
           valuesFile: ci-values-blob.yaml
 
+  - job: ValidateBlobUsingReleaseName
+    pool:
+      vmImage: 'Ubuntu 16.04'
+    steps:
+      - template: steps/charts/validate.yaml@cnp-library
+        parameters:
+          chartName: function
+          chartReleaseName: chart-function-ci-blob-test
+          chartNamespace: chart-tests
+          helmInstallTimeout: "500"
+          valuesFile: ci-values-blob-release-name.yaml
+
   - job: ValidateMixed
     pool:
       vmImage: 'Ubuntu 16.04'
