--- a/function/templates/_blob-trigger.yaml
+++ b/function/templates/_blob-trigger.yaml
@@ -14,6 +14,6 @@
     blobDelimiter: {{ .trigger.blobDelimiter | default "/" }}
   {{- if .root.Values.triggerAuth.enabled }}
   authenticationRef: # authenticationRef would need either podIdentity or define a connection parameter
-{{- include "function.trigger-auth-name" . | indent 4 }}
+{{- include "function.trigger-auth-name" .root | indent 4 }}
   {{- end }}
 {{- end }}
