flag for creating the trigger auth

--- a/ci-values-blob.yaml
+++ b/ci-values-blob.yaml
@@ -1,6 +1,7 @@
 image: hmctspublic.azurecr.io/plum/batch:latest
 triggerAuth:
   enabled: true
+  create: true
   nameOverride: "azure-mi-auth-{{ .Values.scaleType }}"
 triggerPodIdentityProvider: "azure"
 triggers:
