--- a/ci-values-blob-release-name.yaml
+++ b/ci-values-blob-release-name.yaml
@@ -1,6 +1,7 @@
 image: hmctspublic.azurecr.io/plum/batch:latest
 triggerAuth:
   enabled: true
+  create: true
 triggerPodIdentityProvider: "azure"
 triggers:
   - type: azure-blob
