--- a/function/values.yaml
+++ b/function/values.yaml
@@ -25,7 +25,7 @@ cooldownPeriod:  300 # Optional. Default: 300 seconds
 minReplicaCount: 0   # Optional. Default: 0
 maxReplicaCount: 5 # Optional. Default: 5
 triggerAuth:
-  create: false
+  create: true
   enabled: false
   nameOverride: ""
 triggerPodIdentityProvider: "azure" # none | azure | gcp | spiffe | aws-eks | aws-kiam
