--- a/function/templates/_blob-trigger.yaml
+++ b/function/templates/_blob-trigger.yaml
@@ -12,8 +12,8 @@
     {{- end }}
     blobPrefix: {{ .trigger.blobPrefix | default "" | quote }}
     blobDelimiter: {{ .trigger.blobDelimiter | default "/" }}
-  {{- if .root.Values.triggerAuthName }}
-  authenticationRef:
-    name: {{ tpl .root.Values.triggerAuthName .root }} # authenticationRef would need either podIdentity or define a connection parameter
+  {{- if .root.Values.triggerAuth.enabled }}
+  authenticationRef: # authenticationRef would need either podIdentity or define a connection parameter
+{{- include "function.trigger-auth-name" .root | indent 4 }}
   {{- end }}
 {{- end }}
