--- a/function/templates/TriggerAuthentication.yaml
+++ b/function/templates/TriggerAuthentication.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.triggerAuth.create .Values.triggerAuth.enabled }}
-apiVersion: keda.k8s.io/v1alpha1
+apiVersion: keda.sh/v1alpha1
 kind: TriggerAuthentication
 metadata:
 {{- include "function.trigger-auth-name" . | indent 2 }}
