--- a/function/templates/_blob-trigger.yaml
+++ b/function/templates/_blob-trigger.yaml
@@ -5,7 +5,7 @@
     blobContainerName: {{ .trigger.blobContainerName }}
     blobCount: {{ .trigger.blobCount | default "1" | quote }}
     {{- if .trigger.connection }}
-    connection: {{ .trigger.connection }}
+    connectionFromEnv: {{ .trigger.connection }}
     {{- end }}
     {{- if .trigger.accountName }}
     accountName: {{ tpl .trigger.accountName .root }}
