--- a/function/values.yaml
+++ b/function/values.yaml
@@ -14,16 +14,15 @@ dnsConfig:
 global:
   enableKeyVaults: false
   environment: prod
-scaleType: job
 job:
-  parallelism: 1 # [max number of desired pods](https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#controlling-parallelism)
-  completions: 1 # [desired number of successfully finished pods](https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#controlling-parallelism)
-  activeDeadlineSeconds: 600 # Specifies the duration in seconds relative to the startTime that the job may be active before the system tries to terminate it; value must be positive integer
-  backoffLimit: 6 # Specifies the number of retries before marking this job failed. Defaults to 6
-pollingInterval: 30  # Optional. Default: 30 seconds
-cooldownPeriod:  300 # Optional. Default: 300 seconds
-minReplicaCount: 0   # Optional. Default: 0
-maxReplicaCount: 5 # Optional. Default: 5
+  parallelism: 1              # [max number of desired pods](https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#controlling-parallelism)
+  completions: 1              # [desired number of successfully finished pods](https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#controlling-parallelism)
+  activeDeadlineSeconds: 600  # Specifies the duration in seconds relative to the startTime that the job may be active before the system tries to terminate it; value must be positive integer
+  backoffLimit: 6             # Specifies the number of retries before marking this job failed. Defaults to 6
+pollingInterval: 30           # Optional. Default: 30 seconds
+maxReplicaCount: 5            # Optional. Default: 5
+successfulJobsHistoryLimit: 1 # Optional. Default: 100. How many completed jobs should be kept.
+failedJobsHistoryLimit: 5     # Optional. Default: 100. How many failed jobs should be kept.
 triggerAuth:
   create: true
   enabled: false
