--- a/function/templates/_servicebus-trigger.yaml
+++ b/function/templates/_servicebus-trigger.yaml
@@ -9,6 +9,6 @@
     topicName: {{ .topicName }}
     subscriptionName: {{ .subscriptionName }}
     {{- end }}
-    connectionFromEnv: {{ .connection }}
-    messageCount: {{ .queueLength | quote }}
+    connectionFromEnv: {{ coalesce .connectionFromEnv .connection }}
+    messageCount: {{ coalesce .messageCount .queueLength | quote }}
 {{- end }}
