--- a/ci-values-blob.yaml
+++ b/ci-values-blob.yaml
@@ -2,7 +2,7 @@ image: hmctspublic.azurecr.io/plum/batch:latest
 triggerAuth:
   enabled: true
   create: true
-  nameOverride: "azure-mi-auth-{{ .Values.pollingInterval }}" # anything dynamic as a test
+  nameOverride: "azure-mi-auth-{{ .Values.global.environment }}"
 triggerPodIdentityProvider: "azure"
 triggers:
   - type: azure-blob
